[package]
name = "gui"
version = "0.1.0"
authors = ["tarkah <admin@tarkah.dev>"]
edition = "2018"


[dependencies]
iced = { git = "https://github.com/hecrj/iced", branch = "master", features = ['svg','async-std'] }

failure = "0.1"
rand = "0.7"

stats-api = { git = "https://github.com/tarkah/stats-api", rev = "1d8f53d940a5cee741a8e5b744ec4e5573b835fb" }

http = "0.1"
curl = { version = "0.4", default-features=false, features = ["static-curl", "static-ssl", "http2"] }
http-client = { git = "https://github.com/http-rs/http-client", features = ['native_client'], rev = "98359bfbe618de4faef18ddb78193c113b8a14fb" }

futures = "0.3"
